--- a/SASS/base/_reset.scss
+++ b/SASS/base/_reset.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: $main-font;
   color: var(--title-text-color);
   background: var(--title-white-color);
 }
