--- a/SASS/utils/_vars.scss
+++ b/SASS/utils/_vars.scss
@@ -15,4 +15,4 @@ $background-second-color: #f5f4fa;
 $timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 $main-font: 'Roboto', sans-serif;
-$font-family-logo: 'Raleway';
+$font-family-logo: 'Raleway', sans-serif;
