--- a/SASS/base/_base-styles.scss
+++ b/SASS/base/_base-styles.scss
@@ -18,7 +18,7 @@
   margin-bottom: 50px;
 }
 .logo {
-  font-family: Raleway, sans-serif;
+  font-family: $font-family-logo;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
